#442 fix : 코드 간결화